syntax = "proto3";
package com.cmx.shiroweb.chat.proto;
message ChatMessage {
	int32 message_id =  1;
	string message_context = 2;
	message FileMessage {
		string file_name = 1;
		int32 file_size = 2;
		bytes file_content = 3;
	}
	FileMessage fileMessage = 3;
	string file_path = 4;
	int32 message_type = 5;
	int32 message_timestamp = 6;
	message RouterDispatch {
		string from_user = 1;
		string to_user = 2;
		int32 dispatch_type = 3;
	}
	RouterDispatch router_dispatch = 7;
}  